--- a/fullHomeTheaterApp/client/index.html
+++ b/fullHomeTheaterApp/client/index.html
@@ -3,12 +3,14 @@
 <html lang="en" ng-app="homeTheaterApp">
 <head>
 	<!-- My CSS file: using link vs. script -->
-	<link rel="stylesheet" type="text/css" href="home/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/client/css/style.css">
 	<!-- Pulling bootstrap css file (put in my css folder) -->
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="/client/css/bootstrap.css">
 	
 	<title>Angular Home Theater App</title>
 </head>
+
+
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
@@ -24,18 +26,22 @@
 	<!-- Moved scripts to the bottom because they were here in the bah ex -->
 
 	<!-- Add jQuery: bootstrap needs it, I use it, and it must be loaded first -->
-	<script src="lib/jQuery/jquery-1.9.1.min.js"></script>
+	<script src="/client/lib/jQuery/jquery-1.9.1.min.js"></script>
 	<!-- Pulling bootstrap js file: uses script -->
-	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
-	<!-- Pulling in Angular from the web. See Bootstrap note above -->
+	<script src="/client/lib/bootstrap/js/bootstrap.min.js"></script>
+	<!-- Pulling in Angular from the web for core angular functionality -->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
 	<!-- Pulling angular route since I'm using ng-route for partial views -->
-	<script src="./lib/angular-route/angular-route.min.js"></script>
+	<script src="/client//lib/angular-route/angular-route.min.js"></script>
+	<!-- Pulling angular resource for using services and $resource -->
+	<script src="/client/lib/angular-resource/angular-resource.min.js"></script>
 	<!-- Pulling the app.js where the MVC is organized -->
-	<script src="./js/app.js"></script>
+	<script src="/client/js/app.js"></script>
 	<!-- Pulling the controllers.js -->
-	<script src="./js/controllers.js"></script>
+	<script src="/client/js/controllers.js"></script>
 	<!-- Pulling the directives -->
-	<script src="./js/directives.js"></script>
+	<script src="/client/js/directives.js"></script>
+	<!-- Pulling the services -->
+	<script src="/client/js/services.js"></script>
 </body>
 </html>
