Pretty sure this successfully mimics scholarly paper behavior.

--- a/fullHomeTheaterApp/client/index.html
+++ b/fullHomeTheaterApp/client/index.html
@@ -43,5 +43,7 @@
 	<script src="/client/js/directives.js"></script>
 	<!-- Pulling the services -->
 	<script src="/client/js/services.js"></script>
+	<!-- Pull in D3 -->
+	<script src="/client/lib/d3/d3.v3.js"></script>
 </body>
 </html>
