bug fix with main tool bar route behavior

--- a/fullHomeTheaterApp/client/index.html
+++ b/fullHomeTheaterApp/client/index.html
@@ -15,7 +15,7 @@
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#/view1"> Angular Home Theater Implementation</a>
+				<a class="navbar-brand" href="#/blah" id="mainPage"> Angular Home Theater Implementation</a>
 			</div>
 		</div>
 	</div>
