--- a/fullHomeTheaterApp/client/index.html
+++ b/fullHomeTheaterApp/client/index.html
@@ -15,13 +15,13 @@
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#/view1"> Angular Home Theater Implementation</a>
+				<a class="navbar-brand" href="#/home"> Angular Home Theater Implementation</a>
 			</div>
 		</div>
 	</div>
 
 	<!-- Space for differnt views using ng-view -->
-	<div ng-view></div>
+	<div class="container-fluid" ng-view></div>
 
 	<!-- Moved scripts to the bottom because they were here in the bah ex -->
 
