--- a/fullHomeTheaterApp/client/index.html
+++ b/fullHomeTheaterApp/client/index.html
@@ -22,8 +22,11 @@
 				<div class="navbar-header col-md-6">
 					<a class="navbar-brand" href="#/home"> Angular Home Theater Implementation</a>
 				</div>
-				<div class="col-md-6">
-					<a class="navbar-brand pull-right" href="#/view2">Add/Edit Components</a>
+				<div class="col-md-3">
+					<a class="navbar-brand pull-right" href="#/addComponentView">Add Components</a>
+				</div>
+				<div class="col-md-3">
+					<a class="navbar-brand pull-right" href="#/editComponentView">Edit Components</a>
 				</div>
 			</div>
 		</div>
